# interview-analyzer

./: .env.dist  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  requirements.txt  verify_cv_db.py
.githooks/: commit-msg  pre-commit
.github/workflows/: analyzer.yml  backend.yml
analyzer/: pyproject.toml
analyzer/src/: models.py  services.py  streamlit_app.py
analyzer/src/migrations/: 0002_split_interview_into_transcription_and_analysis.py  0003_transcription_name.py  0004_jobapplication.py
analyzer/src/views/: analysis.py  cv.py  home.py  job_application_detail.py  transcription.py
analyzer/tests/unit/: test_analysis_services.py  test_auth.py  test_cv_services.py  test_job_application_services.py  test_transcription_services.py
backend/: Dockerfile
backend/config/: settings.py
backend/src/: apps.py  auth.py  models.py  orchestrator.py  services.py  streamlit_app.py
backend/src/migrations/: 0001_initial.py
backend/src/views/: analysis.py  home.py  interview_analyzer.py  transcription.py
backend/tests/unit/: test_analysis_services.py  test_interview_services.py  test_llm_services.py  test_orchestrator.py  test_transcription_services.py
docs/superpowers/plans/: 2026-03-22-job-application-tracker.md
src/: Home.py  auth.py  database.py  db_fixtures.py
src/pages/: 1_Interview_Analyzer.py
src/services/: interview_orchestrator.py  llm_service.py
src/views/: cv.py  home.py  interview_analyzer.py
tasks/: prd-job-application-tracker.md
