[tool.poetry]
name = "interview-analyzer"
version = "0.1.0"
description = "Interview Analyzer - Streamlit UI"
authors = ["Carlos Alandete Sastre"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
django = "^5.2" # latest 6.0
psycopg2-binary = "^2.9"
openai = "^1.0"
langchain = "^0.3"
langchain-openai = "^0.3"
pypdf = "^5.0"
redis = "^5.0"
django-redis = "^5.4"
streamlit = "^1.45"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-django = "^4.5"
ruff = "^0.15.0"
mypy = "^1.15.0"
django-stubs = "^5.1.3"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["celery.*", "langchain.*", "langchain_openai.*", "openai.*", "pypdf.*", "redis.*", "streamlit.*", "django_redis.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py314"
include = ["src/**/*.py", "tests/**/*.py", "manage.py", "config/**/*.py"]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "DJ",     # flake8-django
]
ignore = ["E501", "RUF012"]

fixable = ["A", "B", "E", "W", "F", "I", "N", "DJ"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"src/__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = [
    "S101",  # allow assert in tests
    "N803",  # allow CamelCase mock parameters
]
"manage.py" = ["T201"]  # allow print in manage.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["config", "src", "tests"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
